--- a/WPF Project/LibraryManagementSystem/AdminBooks.xaml
+++ b/WPF Project/LibraryManagementSystem/AdminBooks.xaml
@@ -5,9 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:LibraryManagementSystem"
              mc:Ignorable="d" 
-             d:DesignHeight="362" d:DesignWidth="655">
+             d:DesignHeight="400" d:DesignWidth="1000">
     <Grid>
-        <StackPanel HorizontalAlignment="Left" Height="332" VerticalAlignment="Top" Width="655" Margin="10,30,-10,0">
+        <StackPanel HorizontalAlignment="Left" Height="332" VerticalAlignment="Top" Width="1000" Margin="10,30,-10,0">
             <DataGrid IsReadOnly="True" Height="333" Margin="0,0,24,0" x:Name="dgBooks" AutoGenerateColumns="False" Background="{DynamicResource {x:Static SystemColors.WindowFrameBrushKey}}">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Book Id" Binding="{Binding BookId}"></DataGridTextColumn>
@@ -16,6 +16,8 @@
                     <DataGridTextColumn Header="Book ISBN" Binding="{Binding BookISBN}"></DataGridTextColumn>
                     <DataGridTextColumn Header="Book Price" Binding="{Binding BookPrice}"></DataGridTextColumn>
                     <DataGridTextColumn Header="Book Copies" Binding="{Binding BookCopies}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Book Image" Binding="{Binding BookImage}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Book Status" Binding="{Binding BookStatus}"></DataGridTextColumn>
                     <DataGridTemplateColumn Header="Actions">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
